added 3 apps to postinstall

--- a/modules/Chrome/manifest.json
+++ b/modules/Chrome/manifest.json
@@ -1,4 +1,5 @@
 {
-	"name": "EvinceThumbnails",
-	"description": "Habilitar miniaturas de PDF usando o Evince"
+	"name": "Chrome",
+	"description": "Instalar Navegador Google Chrome",
+	"pulse": "true"
 }
